--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="images/zoz.png" alt="Mostafa Zidan" width="200" height="200">  </td>
+                <td><img src="Images/zoz.png" alt="Mostafa Zidan" width="200" height="200">  </td>
                 <td><h1>Mostafa Zidan</h1>
                     <p><em>Student at <strong><a href="http://www.helwan.edu.eg/" target="_blank"> Helwan univercity</a></strong></em></p>  
                     <p><em>I am a flutter developer , php and asp.net developer</em></p>
